--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="calc-hours"><b>Часов:</b> <span class="calc-hours__value"></span></div>
       <div class="calc-per-hour"><b>Почасовая сумма:</b> <span class="calc-per-hour__value"></span> руб./час</div>
       <div class="calc-total"><b>Итоговая сумма:</b> <span class="calc-total__value"></span> руб.</div>
-      <button class="btn-calc-submit" type="submit">заказать</button>
+      <button class="btn-calc-submit" type="submit">рассчитать</button>
     </form>
   </section>
 
