--- a/index-v2.html
+++ b/index-v2.html
@@ -75,12 +75,13 @@
       margin-left: 5px;
       padding: 15px 20px;
       border: 1px solid rgba(204,105,9,0.25);
-      background: #fff;
       color: #cc6909;
       -webkit-border-radius: 10px;
       -moz-border-radius: 10px;
       border-radius: 10px;
       outline: none;
+      background-color: #fff;
+      box-shadow: none;
     }
     .inp-calc option{
       line-height: 2em;
