--- a/index-v2.html
+++ b/index-v2.html
@@ -95,7 +95,16 @@
     .inp-calc option{
       line-height: 2em;
     }
+    .calc-b__col:first-child{
+      width: 155px;
+    }
+    .calc-b__col:last-child{
+      width: 188px;
+    }
     @media all and (min-width: 320px) and (max-width: 767px){
+      .calc-form{
+        justify-content: center;
+      }
       .calc-b__col{
         width: 50%;
         margin-bottom: 15px;
@@ -112,9 +121,9 @@
   <section class="calc-b">
     <div class="calc-title">— калькулятор —</div>
     <form action="" method="GET" class="calc-form">
-      <input type="hidden" name="totalsum" id="totalsum">
       <div class="calc-b__col">
         <div class="calc-b__field">
+          <input type="hidden" name="totalsum" id="totalsum">
           <label for="hours" class="label-calc">Часов:</label>
           <select name="hours" id="hours" class="inp-calc">
             <option value="1">1</option>
