--- a/index-v3.html
+++ b/index-v3.html
@@ -100,12 +100,20 @@
         justify-content: center;
       }
       .calc-b__col{
-        width: 188px;
         margin-bottom: 15px;
         padding: 0 15px;
       }
+      .calc-b__col:first-child{
+        width: 155px;
+      }
+      .calc-b__col:last-child{
+        width: 188px;
+      }
       .calc-total__label{
         display: block;
+      }
+      .calc-per-hour, .calc-total{
+        text-align: center;
       }
     }
   </style>
